--- a/src/mocker/config.json
+++ b/src/mocker/config.json
@@ -1,17 +1,30 @@
 {
   "ServerIP": "172.16.85.139",
-  "ServerPort": 5432,
-  "MockerPort": 5432,
+  "ServerPort": 50000,
+  "MockerIP": "172.16.85.139",
+  "MockerPort": 50000,
   "PrintDetails": true,
-  "MockDataLocation": "D:/temp",
+  "MockDataLocation": "D:/Program/mocker/temp/db2",
   "MockDataGroup1": [
-  ],
-  "MockDataGroup2": [
-  ],
-  "MockDataGroup3": [
+    {
+      "RequestFile": "/connreq1.txt",
+      "ResponseFiles": [
+        "/connres1.txt"
+      ]
+    },
+    {
+      "RequestFile": "/connreq2.txt",
+      "ResponseFiles": [
+        "/connres2.txt"
+      ]
+    },
     {
       "RequestFile": "/req1.txt",
-      "Delay": 5
+      "ResponseFiles": [
+        "/res1.txt", "/res2.txt", "/res3.txt"
+      ]
     }
+  ],
+  "MockDataGroup2": [
   ]
 }
